Base de datos de usuarios hecha arreglar bug de las fotos de fondo y redes sociales

--- a/core/templates/Navbar.html
+++ b/core/templates/Navbar.html
@@ -36,7 +36,7 @@
                 <a class="nav-link letraschicas letrascolor" id="letrasnavegacion4"  href="#">Comprar</a>
               </li>
               <li>
-                <a class="nav-link letraschicas letrascolor" href="#">Registrarse</a>
+                <a class="nav-link letraschicas letrascolor" href="{% url 'Formulario_registro' %}">Registrarse</a>
               </li>
               <li class="nav-item dropdown ">
                 <a href="#" class="nav-link dropdown-toogle letraschicas letrascolor" id="letrasnavegacion4"  id="navbardrop" data-toggle="dropdown">Iniciar sesion</a>
