Bug de fotos arreglado

--- a/core/static/css/estilos compra.css
+++ b/core/static/css/estilos compra.css
@@ -83,7 +83,7 @@ a:hover{
     color:#e50914;
 }
 body{
-    background-image: url(../img/fondo.jpg);
+    background-image: url(../img/footer/shared.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
