--- a/core/static/css/estilos galeria.css
+++ b/core/static/css/estilos galeria.css
@@ -130,7 +130,7 @@ footer{
 	height: 30px;
 	margin: 5px 0; 
 	padding: 0; 
-	background: url("../img/shared.png"); /* Posicion imagenes de las redes sociales*/
+	background: url(../img/footer/shared.png); /* Posicion imagenes de las redes sociales*/
 	margin-right: 5px; 
 	cursor: pointer; /* indica que el cursor es un puntero y indica un link*/
 	border-radius: 50%; 
