--- a/core/static/css/estilos.css
+++ b/core/static/css/estilos.css
@@ -141,7 +141,7 @@ body{
 	height: 30px;
 	margin: 5px 0; 
 	padding: 0; 
-	background: url("../img/shared.png"); 
+	background: url(../img/footer/shared.png); 
 	margin-right: 5px; 
 	cursor: pointer; 
 	border-radius: 50%; 
