Implementacion final de las paginas con falta de las tablas del formulario compra en admin de django

--- a/core/templates/Navbar.html
+++ b/core/templates/Navbar.html
@@ -33,7 +33,7 @@
                 <a class="nav-link letraschicas letrascolor" id="letrasnavegacion3"  href="{% url 'Galeria' %}">Cartelera</a>
               </li>
               <li>
-                <a class="nav-link letraschicas letrascolor" id="letrasnavegacion4"  href="#">Comprar</a>
+                <a class="nav-link letraschicas letrascolor" id="letrasnavegacion4"  href="{% url 'Formulario_compra' %}">Comprar</a>
               </li>
               <li>
                 <a class="nav-link letraschicas letrascolor" href="{% url 'Formulario_registro' %}">Registrarse</a>
