--- a/core/static/css/estilos compra.css
+++ b/core/static/css/estilos compra.css
@@ -1,43 +1,4 @@
 
-#SeleccionPeli{
-    margin-left: 23px;
-    width: 250px
-}
-
-#Entrada{
-    margin-left: 25px;
-    width: 200px
-}
-
-#Correo{
-    margin-left: 25px;
-    width: 300px
-}
-#fechacaducidad{
-    margin-left: 60px;
-    width: 100px;
-}
-#nroverificador{
-    margin-left: 49px;
-    width: 70px;
-}
-#Direccion{
-    margin-left: 25px;
-    width: 350px;
-}
-#Codigopostal{
-    margin-left: 25px;
-    width: 250px;
-}
-#img{
-    width: 50px;
-    height: 40px;
-}
-#Telefono{
-    width: 300px;
-    margin-left: 25px;
-}
-/*Distintas letras */
 .letras{
     font-size: x-large; 
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -51,6 +12,7 @@
     color: rgb(255, 255, 255);
     text-align: justify;
 }
+
 .boton{
     text-shadow: -1px -1px 1px #000, 1px 1px 1px #000, -1px 1px 1px #000, 1px -1px 1px #000;
     font-size: large;
@@ -59,7 +21,6 @@
     color: rgb(255, 255, 255);
     text-align: center;
 }
-
 #boton1{
     margin-left: 60px;
     border-radius: 5px;
@@ -83,7 +44,7 @@ a:hover{
     color:#e50914;
 }
 body{
-    background-image: url(../img/footer/shared.png);
+    background-image: url(../img/fondo.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -96,7 +57,7 @@ body{
 }
 
 .formulario{
-    max-width: 950px;
+    max-width: 600px;
     background-color: #0a0a0a;
     width: auto;
     text-align: left;
@@ -110,7 +71,7 @@ body{
 	height: 30px;
 	margin: 5px 0; 
 	padding: 0; 
-	background: url("../img/shared.png"); 
+	background: url(../img/shared.png); 
 	margin-right: 5px; 
 	cursor: pointer; 
 	border-radius: 50%; 
