--- a/core/templates/Navbar.html
+++ b/core/templates/Navbar.html
@@ -38,8 +38,14 @@
               <li>
                 <a class="nav-link letraschicas letrascolor" href="{% url 'Formulario_registro' %}">Registrarse</a>
               </li>
+              <li>
+                <a class="nav-link letraschicas letrascolor" href="{% url 'login' %}">Iniciar Sesion</a>
+              </li>
+              <li>
+                <a class="nav-link letraschicas letrascolor" href="{% url 'pelicula_form' %}">crear peli</a>
+              </li>
               <li class="nav-item dropdown ">
-                <a href="#" class="nav-link dropdown-toogle letraschicas letrascolor" id="letrasnavegacion4"  id="navbardrop" data-toggle="dropdown">Iniciar sesion</a>
+                
                   </li>
                   <li class="nav-item dropdown ">
                     <a href="#" class="nav-link dropdown-toogle letraschicas letrascolor" id="letrasnavegacion4"  id="navbardrop" data-toggle="dropdown">Temas</a>
